[package]
name = "frost_signer_core"
version = "0.1.0"
edition = "2021"

# One binary, multiple subcommands.
# The C signer calls it as:
#   frost_signer_core dkg_part1 --id 1 --n 3 --t 2
#   frost_signer_core dkg_part2 --id 1 --n 3 --t 2
#   frost_signer_core dkg_part3 --id 1
#   frost_signer_core commit    --id 1
#   frost_signer_core sign      --id 1
#
# All multi-blob inputs arrive on stdin as consecutive hex lines.
# All outputs are written to stdout as consecutive hex lines.
# Errors go to stderr with a leading "ERROR: " prefix.

[[bin]]
name = "frost_signer_core"
path = "main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
frost-ed25519 = { version = "3.0.0", features = ["serialization"] }
ssh-key = { version = "0.6", features = ["alloc", "std", "ed25519", "std", "crypto"] }
signature = "2"

# If using the local checkout instead:
# frost-ed25519 = { path = "../frost_project/frost/frost-ed25519", features = ["serialization"] }
rand = "0.8"

# hex encoding/decoding — no extra dep needed, we roll our own with fmt::Write
# serde_json for the state file (KeyPackage must survive across popen calls)
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
